# georust

./: Cargo.toml  README.md
src/: haversine.rs  lib.rs  load_geonames.rs
src/geonames/: gazetteer.rs  mod.rs  postal.rs
src/models/: countries.rs  geolocation.rs  geonames.rs  geonames_gazetteer.rs  geonames_postal.rs  mod.rs
src/utils/: mod.rs  places.rs  postal.rs
